--- a/style.css
+++ b/style.css
@@ -13,15 +13,15 @@
     --text-light: #FFFFFF;
     
     /* Button Colors */
-    --btn-linkedin: #325E6F;
-    --btn-github: #003247;
+    --btn-linkedin: #0B65C2;
+    --btn-github: #1F2328;
     --btn-scholar: #4285F4;
-    --btn-institute: #325E6F;
-    --btn-laboratory: #003247;
+    --btn-institute: #01549F;
+    --btn-laboratory: #8DB9E5;
     
     /* Border Colors */
     --border-light: #DCD7C9;
-    --border-accent: #325E6F;
+    --border-accent: #ca9161;
 }
 
 * {
@@ -147,8 +147,8 @@ section h2 {
 }
 
 .author-photo img {
-    width: 100px;
-    height: 100px;
+    width: 120px;
+    height: 120px;
     object-fit: contain;
 }
 
